--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Type: Package
 Package: connectR
-Version: 0.1.6
+Version: 0.1.7
 Title: Database backend for DBI, dplyr and dbplyr
 Description: Allows you to use dplyr code with databases using the DBI package.
-Authors@R: person("Dyfan", "Jones", email="dyfanjones@hotmail.com", 
+Authors@R: person("Dyfan", "Jones", email="dyfan.jones@shopdirect.com", 
                   role= c("aut", "cre"))
-URL: https://github.com/DyfanJones/connectR 
-BugReports: https://github.com/DyfanJones/connectR/issues
+URL: https://bitbucket.org/ShopDirect/connectr
+BugReports: https://bitbucket.org/ShopDirect/connectr/issues?status=new&status=open
 Encoding: UTF-8
 Depends: R (>= 3.1.2)
 Imports: assertthat,
