--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,10 @@ Package: connectR
 Version: 0.1.7
 Title: Database backend for DBI, dplyr and dbplyr
 Description: Allows you to use dplyr code with databases using the DBI package.
-Authors@R: person("Dyfan", "Jones", email="dyfan.jones@shopdirect.com", 
+Authors@R: person("Dyfan", "Jones", email="dyfanjones@hotmail.com", 
                   role= c("aut", "cre"))
-URL: https://bitbucket.org/ShopDirect/connectr
-BugReports: https://bitbucket.org/ShopDirect/connectr/issues?status=new&status=open
+URL: https://github.com/DyfanJones/connectR 
+BugReports: https://github.com/DyfanJones/connectR/issues
 Encoding: UTF-8
 Depends: R (>= 3.1.2)
 Imports: assertthat,
